Changed moveStorage and moveSpace to HTTP Patch and changed the routes to be dependant just on the objectives ID
